Done some changes

--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
         
           <li class="blog-post-item">
             <figure class="blog-banner-box">
-              <img src="./assets/images/Educare.webp" alt="EduCare" loading="lazy">
+              <img src="./assets/images/EduCare.png" alt="EduCare" loading="lazy">
             </figure>
               <div class="blog-content">
                 <div class="blog-header">
