Updated another Picture

--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
         
           <li class="blog-post-item">
             <figure class="blog-banner-box">
-              <img src="./assets/images/compiler.jpg" alt="C Compiler" loading="lazy">
+              <img src="./assets/images/compiler.png" alt="C Compiler" loading="lazy">
             </figure>
               <div class="blog-content">
                 <div class="blog-header">
