--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
           <li class="timeline-item">
             <div class="education-header">
               <h4 class="h4 timeline-item-title">Bangladesh University of Engineering and Technology</h4>
-              <span>February 2020 - February 2025 (Expected)</span>
+              <span>February 2020 - March 2025</span>
             </div>
             <div class="education-header">
               <h5 class="h5 timeline-item-subtitle">B.Sc. in Computer Science and Engineering</h5>
